--- a/WebApplication/Content/Site.css
+++ b/WebApplication/Content/Site.css
@@ -15,3 +15,16 @@ select,
 textarea {
     max-width: 280px;
 }
+
+table,
+thead,
+tr,
+tbody,
+th,
+td {
+  text-align: center;
+}
+
+.table td {
+  text-align: center;
+}
